--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@
 # Dependencies
 node_modules
 npm-debug.log
-package-lock.json
+# Note: package-lock.json is needed for npm ci, so we don't ignore it
 
 # Environment files
 .env
