Add interruption control via environment variable and improve STT pause/resume logic

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,29 @@
-﻿# Happy AI Call System - Environment Variables Template
-# Copy this file to .env and fill in your actual values
-
-# Server Configuration
+﻿# Server Configuration
 PORT=3000
-# For local: your-ngrok-domain.ngrok.io (without https://)
-# For Render: your-service-name.onrender.com (without https://)
-SERVER=your-domain-here.com
+SERVER=your-ngrok-or-domain.com
 
 # Twilio Configuration
-# Get from: https://console.twilio.com/
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
-FROM_NUMBER=+1234567890
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+FROM_NUMBER=+1234567890  # Your Twilio phone number
 
-# Deepgram Configuration
-# Get from: https://console.deepgram.com/
-DEEPGRAM_API_KEY=replace_with_your_deepgram_api_key
-VOICE_MODEL=aura-asteria-en
+# Deepgram Configuration (for STT and optional TTS)
+DEEPGRAM_API_KEY=your_deepgram_api_key
+VOICE_MODEL=aura-asteria-en  # For Deepgram TTS
 
 # OpenAI Configuration
-# Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-replace_with_your_openai_api_key
 OPENAI_MODEL=gpt-4o-mini
+OPENAI_API_KEY=your_openai_api_key
 
-# TTS Provider (optional)
-TTS_PROVIDER=deepgram
+# Interruption Control
+# Set to 'true' to allow user to interrupt AI while speaking
+# Set to 'false' to disable interruption - AI will complete full sentences before listening
+INTERRUPTION_ENABLED=false
+
+# TTS Provider (optional - default is Deepgram)
+# TTS_PROVIDER=cartesia
+# CARTESIA_API_KEY=your_cartesia_api_key
+# CARTESIA_VOICE_ID=your_voice_id
 
 # Recording (optional)
 RECORDING_ENABLED=false
