--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,7 @@ sfdrs.txt
 .env.local
 .env.*.local
 
+# Temporary audio files
+beep_temp.wav
+
 # End of https://www.toptal.com/developers/gitignore/api/node
