--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "license": "MIT",
   "dependencies": {
     "@deepgram/sdk": "^3.3.4",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-ws": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^2.7.0",
     "openai": "^4.20.1",
     "twilio": "^4.19.3",
